--- a/Labos_02/Labos_02.vcxproj
+++ b/Labos_02/Labos_02.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{48ea6d59-9a9a-4c6b-be19-8648bb9976d3}</ProjectGuid>
-    <RootNamespace>CLANG</RootNamespace>
+    <ProjectGuid>{74fa10c4-96b4-471c-9bb2-543579579f51}</ProjectGuid>
+    <RootNamespace>Labos02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -126,13 +126,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Hipotenuza.c" />
-    <ClCompile Include="ifelse.c" />
-    <ClCompile Include="Main.c" />
-    <ClCompile Include="test.c" />
-    <ClCompile Include="Zadatak1.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
