--- a/Predavanje_07/Predavanje_07.vcxproj
+++ b/Predavanje_07/Predavanje_07.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{48ea6d59-9a9a-4c6b-be19-8648bb9976d3}</ProjectGuid>
-    <RootNamespace>CLANG</RootNamespace>
+    <ProjectGuid>{bc4f2d59-eacd-4d30-a64c-8a5a49aba4ea}</ProjectGuid>
+    <RootNamespace>Predavanje07</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hipotenuza.c" />
-    <ClCompile Include="ifelse.c" />
-    <ClCompile Include="Main.c" />
-    <ClCompile Include="test.c" />
-    <ClCompile Include="Zadatak1.c" />
+    <ClCompile Include="Slova.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
