--- a/Labos_06/Labos_06.vcxproj
+++ b/Labos_06/Labos_06.vcxproj
@@ -18,14 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Zadatak_03.c" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{cf2869bc-702f-4a3a-8cba-840487d3f027}</ProjectGuid>
-    <RootNamespace>Labos05</RootNamespace>
+    <ProjectGuid>{60b64984-6405-4533-b3a5-8007f678c04e}</ProjectGuid>
+    <RootNamespace>Labos06</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -129,6 +126,13 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
+    <Text Include="LozinkeIn.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Zadatak_04.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
