--- a/Predavanje_13/Predavanje_13.vcxproj.filters
+++ b/Predavanje_13/Predavanje_13.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
+    <Text Include="zadatak_03.txt" />
+  </ItemGroup>
 </Project>
