--- a/Predavanje_14/Predavanje_14.vcxproj.filters
+++ b/Predavanje_14/Predavanje_14.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="LozinkeIn.txt" />
-    <Text Include="input.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Zadatak_01.c">
+    <ClCompile Include="Zadatak_02.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Rezultati.txt" />
+    <Text Include="ulazna.txt" />
   </ItemGroup>
 </Project>
